sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:23: error: ')' expected but $XMLSTART$< found.
    while (i <b){
             ^AlgCocktailSort2:42: error: illegal start of simple expression
} while (t == false)
^